--- a/neosoft_project/package.json
+++ b/neosoft_project/package.json
@@ -29,9 +29,11 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-share": "^4.4.0",
+    "react-simple-star-rating": "^4.0.5",
     "react-social-login": "^3.4.15",
     "react-to-pdf": "^0.0.14",
     "react-zoom-pan-pinch": "^2.1.3",
+    "reactjs-popup": "^2.0.5",
     "stars-rating-react-hooks": "^0.2.4",
     "web-vitals": "^2.1.2"
   },
